# ncsync

./: .gitignore  Cargo.toml  todo_ncsync.md
ncsync_lib/: Cargo.toml
ncsync_lib/examples/: download_test.rs  login_test.rs  upload_test.rs
ncsync_lib/src/: cli.rs  communicate.rs  entry.rs  errors.rs  lib.rs  login.rs  path.rs  setting.rs
ncsync_lib/src/communicate/: download.rs  upload.rs
ncsync_lib/src/setting/: readwrite.rs
